--- a/static/multiStatus.html
+++ b/static/multiStatus.html
@@ -39,11 +39,16 @@
                             document.getElementById("homeButton").removeAttribute("style");
                         }
 
+
                         if (resp.status === "downloading") {
-                            document.getElementById("title").innerText = "Downloading...";
-                            document.getElementById("n1").innerText = resp.p1;
-                            document.getElementById("n2").innerText = resp.p2;
-                            document.getElementById("pp").innerText = resp.pp + "%";
+                            if (resp.audioConvert) {
+                                document.getElementById("title").innerText = "Skipped / No Video";
+                            } else {
+                                document.getElementById("title").innerText = "Downloading...";
+                                document.getElementById("n1").innerText = resp.p1;
+                                document.getElementById("n2").innerText = resp.p2;
+                                document.getElementById("pp").innerText = resp.pp + "%";
+                            }
                         } else if (resp.status === "finished") {
                             document.getElementById("title").innerText = "Finished";
                             document.getElementById("n1").innerText = resp.p2;
@@ -65,8 +70,12 @@
                             if (resp.convertStatus === "finished") {
                                 clearInterval(updateInterval);
                                 document.getElementById("superP").innerText = "Done!"
-                                downloadURI('/splitVideo', title);
                                 document.getElementById("homeButton").removeAttribute("style");
+                                if (resp.audioConvert) {
+                                    downloadURI('/audioFile', title);
+                                } else {
+                                    downloadURI('/splitVideo', title);
+                                }
                             } else {
                                 document.getElementById("superP").innerText = "Converting..."
                             }
